force-app/main/default/objects/DFD_Comment__c/DFD_Comment__c.object-meta.xml
<CustomObject>
    <label>Comment</label>
    <nameField>
        <displayFormat>SC-{000000}</displayFormat>
        <label>Service Comment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>