force-app/main/default/objects/DFD_Comment__c/fields/DFD_Comment__c.field-meta.xml
<CustomField>
    <fullName>DFD_Comment__c</fullName>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>