force-app/main/default/objects/DFD_Comment__c/fields/DFD_Comment_User__c.field-meta.xml
<CustomField>
    <fullName>DFD_Comment_User__c</fullName>
    <label>Comment User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>