force-app/main/default/objects/DFD_Comment__c/fields/DFD_CW_Comment_ID__c.field-meta.xml
<CustomField>
    <fullName>DFD_CW_Comment_ID__c</fullName>
    <description>City Works Comment Id</description>
    <label>CW Comment ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>