force-app/main/default/objects/DFD_Comment__c/fields/DFD_Service_Application_Detail__c.field-meta.xml
<CustomField>
    <fullName>DFD_Service_Application_Detail__c</fullName>
    <label>Service Application Detail</label>
    <referenceTo>Service_Application_Detail__c</referenceTo>
    <relationshipName>Service_Comments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>